
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Fixed bug in modManagerResponse dealing with CMPs and templating paths
- Moved controllers/* files to controllers/default/ to allow for custom manager templating
- Fixed bugs with Property Sets not showing correctly in dropdowns
- Updated xPDO to revision 385 to fix cache_db functionality broken by PHP 5 only changes
- [#MODX-1514] Added css for pointer cursor to top menus
- [#MODX-1513] Added check for SimpleXML to installer
- Add sanity check to make sure languages arent erased on package uninstall
- Removed confirm dialog for remove action on Access Permissions grid
- Fixed panel layout for Access Policies, User Group editing
- Fixed E_STRICT warning on modX::getCacheManager() [method signature did not match xPDO::getCacheManager()]

MODx Revolution 2.0.0-beta-5 (LastChangedRevision: 6224, LastChangedDate: 2009-12-15 10:03:36 -0700 (Tue, 15 Dec 2009))
====================================
- Fixed bug where Set to Default on Resource TV panel was hidden unless you clicked Reload
- Fixed some bugs with Property Sets editing
- Fixed bug where download wasnt working for package management due to missing provider
- Fixed bug where quick create Static Resource wasnt loading MODx.Browser
- [#MODX-1496] Fixed issue with scrolling context menus not working on local grids
- Fixed styling in welcome panel
- Shrinking top menu a bit to fit in smaller window resolutions
- Fixed invalid method reference in modInstallTest derivative classes
- Fixed styling and JS in TV pane
- Fixed error with charset reference in setup/
- Clear Search in Package Browser when clicking on a Tag 
- Added Search bar to Package Browser, now can search entire repository