@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added "disabled" checkbox to Quick Update Plugin
 - Fixed bug in modManagerResponse dealing with CMPs and templating paths
 - Moved controllers/* files to controllers/default/ to allow for custom manager templating
 - Fixed bugs with Property Sets not showing correctly in dropdowns
